Major structural refactoring, replace record classes in season 2.